--- a/src/app/nurses-manage-dashboard/other-departments/other-departments.component.html
+++ b/src/app/nurses-manage-dashboard/other-departments/other-departments.component.html
@@ -15,7 +15,7 @@
             <td mat-cell *matCellDef="let element"> {{element.ImperialBirth}} </td>
         </ng-container>
         <ng-container matColumnDef="other">
-            <th mat-header-cell *matHeaderCellDef> אחר </th>
+            <th mat-header-cell *matHeaderCellDef> מכשירנים </th>
             <td mat-cell *matCellDef="let element"> {{element.OtherBirth}} </td>
         </ng-container>
         <ng-container matColumnDef="beforebirth">
