--- a/src/app/fill-report/fill-report.component.html
+++ b/src/app/fill-report/fill-report.component.html
@@ -2,7 +2,7 @@
     <div class="modal-header text-right">
         <div class="row mt-3">
             <div class="col-4">
-                {{date2}} - {{time2}} - {{userFullName}}
+                <span>{{date2}} - {{time2}}</span> <br><span>{{userFullName}}</span> 
             </div>
             <div class="col-3">
                 <span style="font-size: 20px;"
