--- a/src/app/nurses-department-manage/nurses-department-manage.component.css
+++ b/src/app/nurses-department-manage/nurses-department-manage.component.css
@@ -38,12 +38,24 @@ td.mat-cell{
 }
 
 .mat-row:nth-child(even){
-  background-color: aliceblue;
-}
-      
-.mat-row:nth-child(odd){
   background-color: floralwhite;
 }
+ 
+/* .mat-row:nth-child(even) :hover{
+  background-color: grey;
+} */
+
+.mat-row:nth-child(odd){
+  background-color: aliceblue;
+}
+
+.mat-row:nth-child :hover{
+  background-color: grey;
+}
+
+/* .mat-row:nth-row(odd) :hover{
+  background-color: grey;
+} */
 
 [dir=rtl] th.mat-header-cell {
     text-align: center;
