--- a/src/app/nurses-department-manage/nurses-department-manage.component.html
+++ b/src/app/nurses-department-manage/nurses-department-manage.component.html
@@ -7,7 +7,7 @@
     <div class="card text-center" id="table-overflow">
       <div class="row">
         <div class="col">
-          
+
         </div>
         <div class="col">
           <h4><b>{{Dept_Name}}</b> {{myDate | date: "dd.MM.yyyy"}}</h4>
@@ -229,7 +229,7 @@
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
-          <tr mat-row *matRowDef="let row;let even=even; columns: displayedColumns2;"
+          <tr mat-row *matRowDef="let row;let even=even; columns: displayedColumns2;" id="rowTable"
             matTooltip="{{row.SSP_DESCRIPTION}}&#13;{{row.CoronaStatus}}" matTooltipClass="my-tooltip"
             matTooltipPosition="before"></tr>
         </table>
