--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.css
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.css
@@ -20,10 +20,14 @@
       }
   }
 
+  #EventBtndisplay{
+    margin-top: 10px;
+  }
+
   #dashLine{
     margin-bottom: 0px;
     border: 2px solid black;
-    margin-top: 2px;
+    margin-top: 10px;
   }
 
   .card.w-85-p{
